# medrap-analysis

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: python-build.yaml  tests.yaml
scripts/: aggregate_llm_judge_rank_sweep.py  aggregate_llm_judge_rank_sweep_slurm.sh  extract_and_visualize.py  plot_llm_judge_winrates.py  run_demographic_heatmap.py  run_extraction_pipeline.py  run_llm_judge.py  run_llm_judge_rank_sweep_array_slurm.sh  run_llm_judge_rank_sweep_slurm.sh  submit_llm_judge_rank_sweep.sh  summarize_sweep.py
src/medrap_analysis/: __init__.py  comorbidity.py  demographic_analysis.py  llm_judge.py
src/package_name/: __init__.py
tests/: test_comorbidity.py  test_demographic_analysis.py  test_llm_judge.py  test_run_extraction_pipeline.py  test_run_llm_judge.py
