[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medrap-analysis"
dynamic = ["version"] # Makes setuptools-scm manage the version
authors = [
  {name="Matthew McDermott", email="mattmcdermott8@gmail.com"}, # Replace with your team's details
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Change if not using MIT license
    "Operating System :: OS Independent",
]
dependencies = [
  "medrap @ git+https://github.com/McDermottHealthAI/MedRAP.git",
  "datasets>=2.0",
  "joblib>=1.3",
  "numpy>=1.26",
  "polars>=0.20",
  "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
  "pre-commit<4", "ruff", "pytest", "pytest-cov", "pretty-print-directory",
  "shfmt-py==3.12.0.2",
]
docs = []
llm_judge = ["openai>=1.0.0", "tiktoken>=0.7.0", "xlsxwriter>=3.2"]
viz = ["matplotlib>=3.8", "umap-learn>=0.5"]

[tool.setuptools_scm] # Required for setuptools-scm to work, even if empty

[tool.uv]
default-groups = ["dev", "llm_judge", "viz"]

[project.optional-dependencies]
llm_judge = ["openai>=1.0.0", "tiktoken>=0.7.0", "xlsxwriter>=3.2"]
viz = ["matplotlib>=3.8", "umap-learn>=0.5"]

[project.scripts] # Add any console scripts here

[tool.pytest.ini_options] # Default pytest options
addopts = [
  "--color=yes",
  "--doctest-modules", # Ensures that doctest runs
  "--ignore=docs",
  "--ignore=AGENTS.md",
  "--ignore=CONTRIBUTORS.md",
  "--doctest-glob=*.md",
  "--doctest-continue-on-failure",
]
markers = [] # Add any custom pytest markers here
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[project.urls]
Homepage = "https://github.com/McDermottHealthAI/medrap-analysis"
Issues = "https://github.com/McDermottHealthAI/medrap-analysis/issues"

[tool.deptry.per_rule_ignores]
# torch, lightning, omegaconf, pandas, yaml (PyYAML) are pulled in
# transitively through medrap and will always be present when this package
# is installed; no need to re-declare them as direct deps.
DEP003 = ["lightning", "omegaconf", "pandas", "torch", "yaml"]

[tool.ruff] # Ruff configuration for linting and formatting
target-version = "py312"
line-length = 110
extend-exclude = ["docs/index.md"]

# Enable linters
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "N",   # pep8-naming
    "D",   # docstring-checker
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
"test_*" = ["DTZ001"]  # Ignore datetimez in test files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["*MEDS*", "*NRT*", "D", "L"] # Allow common abbreviations; "D" is used for distributions/datasets

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["medrap_analysis"]
